kubernetes/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio
    app.kubernetes.io/component: console
    app.kubernetes.io/part-of: minio
  annotations:
    # NGINX Ingress Controller
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
    # Cert-manager for automatic TLS certificates
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  
    
    # Proxy settings for large file uploads
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - minio.marouanedbibih.studio
      secretName: minio-console-tls
  rules:
    - host: minio.marouanedbibih.studio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio  # Service name created by Helm chart
                port:
                  name: minio-console
